--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>React App</title>
+    <title>Gamer-Data</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
